# Web-Engine

./: Cargo.toml  index.html  umm.js
res/: wall1.mtl
src/: camera.rs  component.rs  gui.rs  lib.rs  main.rs  model.rs  physics.rs  resources.rs  shader.wgsl  texture.rs  thing.rs
src/components/: ball.rs  paddle.rs
