[package]
name = "final-year-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
wgpu = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20.0"
egui = "0.23"
epi = "0.17.0"
wasm-timer = "0.2.5"
tobj = { version = "3.2.1", features = [
    "async",
]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"



[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlInputElement",
    "FileList",
    "ReadableStreamDefaultReader",
]}
reqwest = { version = "0.11" }
js-sys = "0.3.68"
gloo = { version = "0.11.0", features = ["file","futures",]}



[lib]
crate-type = ["cdylib", "rlib"]
